[package]
name = "clock2"
version = "0.1.0"
authors = ["Benno Rice <benno.rice@artprocessors.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloc-cortex-m = "0.4"
arduino_nano33iot = { path="../atsamd/boards/arduino_nano33iot", features=["unproven", "usb"] }
atsamd-hal = { path="../atsamd/hal" }
cortex-m = "0.7"
cortex-m-rt = "0.6"
cortex-m-rtic = "0.5"
embedded-hal = { version="0.2", features=["unproven"] }
panic-semihosting = "0.5"
usb-device = "0.2"
usbd-serial = "0.1"
wifi-nina = { path="../wifi-nina" }